[gd_scene load_steps=12 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://fonts/new_theme.tres" type="Theme" id=3]
[ext_resource path="res://Enemy.tscn" type="PackedScene" id=4]
[ext_resource path="res://bg_back.png" type="Texture" id=5]
[ext_resource path="res://bg_sky.png" type="Texture" id=6]

[sub_resource type="Shader" id=1]
code = "// CanvasItemのシェーダーであることを宣言
shader_type canvas_item;

// UV値のオフセット値
uniform vec2 ofs_uv;

// フラグメントシェーダー
void fragment() {
    // 色を取得
    vec4 color = texture(TEXTURE, vec2(UV.x+TIME*0.1, UV.y));

    // 反映
    COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/ofs_uv = null

[sub_resource type="Shader" id=3]
code = "// CanvasItemのシェーダーであることを宣言
shader_type canvas_item;

// UV値のオフセット値
uniform vec2 ofs_uv;

// フラグメントシェーダー
void fragment() {
    // 色を取得
    vec4 color = texture(TEXTURE, vec2(UV.x+TIME*0.05, UV.y));

    // 反映
    COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )
shader_param/ofs_uv = null

[sub_resource type="Environment" id=5]
background_mode = 4
background_canvas_max_layer = 3
glow_intensity = 0.11
glow_bloom = 0.1
glow_blend_mode = 0
glow_hdr_threshold = 2.1
glow_hdr_luminance_cap = 3.0
glow_hdr_scale = 1.1

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="BgLayer" type="CanvasLayer" parent="."]
scale = Vector2( 1.28, 1.28 )
transform = Transform2D( 1.28, 0, 0, 1.28, 0, 0 )
follow_viewport_enable = true

[node name="BgBack" type="Sprite" parent="BgLayer"]
modulate = Color( 0.537255, 0.537255, 0.537255, 1 )
material = SubResource( 2 )
texture = ExtResource( 5 )
centered = false

[node name="BgSky" type="Sprite" parent="BgLayer"]
modulate = Color( 0.537255, 0.537255, 0.537255, 1 )
material = SubResource( 4 )
texture = ExtResource( 6 )
centered = false

[node name="MainLayer" type="CanvasLayer" parent="."]
follow_viewport_enable = true

[node name="Player" parent="MainLayer" instance=ExtResource( 2 )]
position = Vector2( 512, 512 )

[node name="Enemy" parent="MainLayer" instance=ExtResource( 4 )]
position = Vector2( 512, 64 )

[node name="ShotLayer" type="CanvasLayer" parent="."]
follow_viewport_enable = true

[node name="ParticleLayer" type="CanvasLayer" parent="."]
follow_viewport_enable = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 5 )

[node name="UILayer" type="CanvasLayer" parent="."]
layer = 10

[node name="ChangeSprButton" type="CheckButton" parent="UILayer"]
margin_left = 632.0
margin_top = 8.0
margin_right = 708.0
margin_bottom = 48.0

[node name="Label" type="Label" parent="UILayer/ChangeSprButton"]
margin_left = 72.0
margin_right = 296.0
margin_bottom = 40.0
theme = ExtResource( 3 )
text = "弾のスプライト変更"

[node name="OffsetButton" type="CheckButton" parent="UILayer"]
margin_left = 632.0
margin_top = 48.0
margin_right = 708.0
margin_bottom = 88.0

[node name="Label" type="Label" parent="UILayer/OffsetButton"]
margin_left = 72.0
margin_right = 296.0
margin_bottom = 40.0
theme = ExtResource( 3 )
text = "発射位置をオフセットする"

[node name="ScatterButton" type="CheckButton" parent="UILayer"]
margin_left = 632.0
margin_top = 88.0
margin_right = 708.0
margin_bottom = 128.0

[node name="Label" type="Label" parent="UILayer/ScatterButton"]
margin_left = 72.0
margin_right = 296.0
margin_bottom = 40.0
theme = ExtResource( 3 )
text = "弾の発射方向をバラす"

[node name="ScatterRange" type="HSlider" parent="UILayer"]
margin_left = 688.0
margin_top = 128.0
margin_right = 872.0
margin_bottom = 144.0
min_value = 1.0
max_value = 32.0
value = 5.0

[node name="Label" type="Label" parent="UILayer/ScatterRange"]
margin_left = 200.0
margin_top = -10.0
margin_right = 264.0
margin_bottom = 30.0
theme = ExtResource( 3 )
text = "範囲"

[node name="ParticleButton" type="CheckButton" parent="UILayer"]
margin_left = 632.0
margin_top = 160.0
margin_right = 708.0
margin_bottom = 200.0

[node name="Label" type="Label" parent="UILayer/ParticleButton"]
margin_left = 72.0
margin_right = 296.0
margin_bottom = 40.0
theme = ExtResource( 3 )
text = "ヒットパーティクル表示"

[node name="CameraShakeButton" type="CheckButton" parent="UILayer"]
margin_left = 632.0
margin_top = 200.0
margin_right = 708.0
margin_bottom = 240.0

[node name="Label" type="Label" parent="UILayer/CameraShakeButton"]
margin_left = 72.0
margin_right = 296.0
margin_bottom = 40.0
theme = ExtResource( 3 )
text = "スクリーンシェイク"

[node name="HitShakeButton" type="CheckButton" parent="UILayer"]
margin_left = 632.0
margin_top = 240.0
margin_right = 708.0
margin_bottom = 280.0

[node name="Label" type="Label" parent="UILayer/HitShakeButton"]
margin_left = 72.0
margin_right = 296.0
margin_bottom = 40.0
theme = ExtResource( 3 )
text = "ヒットシェイク"

[node name="KnockBackButton" type="CheckButton" parent="UILayer"]
margin_left = 632.0
margin_top = 280.0
margin_right = 708.0
margin_bottom = 320.0

[node name="Label" type="Label" parent="UILayer/KnockBackButton"]
margin_left = 72.0
margin_right = 296.0
margin_bottom = 40.0
theme = ExtResource( 3 )
text = "ノックバック"

[node name="HitSlowButton" type="CheckButton" parent="UILayer"]
margin_left = 632.0
margin_top = 320.0
margin_right = 708.0
margin_bottom = 360.0

[node name="Label" type="Label" parent="UILayer/HitSlowButton"]
margin_left = 72.0
margin_right = 296.0
margin_bottom = 40.0
theme = ExtResource( 3 )
text = "ヒットストップ・スロー"

[node name="HitSlowRate" type="HSlider" parent="UILayer"]
margin_left = 688.0
margin_top = 360.0
margin_right = 872.0
margin_bottom = 376.0
max_value = 80.0
value = 50.0

[node name="Label" type="Label" parent="UILayer/HitSlowRate"]
margin_left = 200.0
margin_top = -10.0
margin_right = 264.0
margin_bottom = 30.0
theme = ExtResource( 3 )
text = "速度"

[node name="BlurButton" type="CheckButton" parent="UILayer"]
margin_left = 632.0
margin_top = 376.0
margin_right = 708.0
margin_bottom = 416.0

[node name="Label" type="Label" parent="UILayer/BlurButton"]
margin_left = 72.0
margin_right = 296.0
margin_bottom = 40.0
theme = ExtResource( 3 )
text = "ブラー"

[node name="TrailButton" type="CheckButton" parent="UILayer"]
margin_left = 632.0
margin_top = 416.0
margin_right = 708.0
margin_bottom = 456.0

[node name="Label" type="Label" parent="UILayer/TrailButton"]
margin_left = 72.0
margin_right = 296.0
margin_bottom = 40.0
theme = ExtResource( 3 )
text = "トレイル"

[node name="HDRButton" type="CheckButton" parent="UILayer"]
margin_left = 632.0
margin_top = 456.0
margin_right = 708.0
margin_bottom = 496.0

[node name="Label" type="Label" parent="UILayer/HDRButton"]
margin_left = 72.0
margin_right = 296.0
margin_bottom = 40.0
theme = ExtResource( 3 )
text = "HDR"

[node name="MainCamera" type="Camera2D" parent="."]
position = Vector2( 512, 300 )
current = true
